--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "ajv": "^8.17.1",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "fs": "^0.0.1-security",
     "mongoose": "^8.7.2"
   }
 }
